formated code correctly for readability

--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,3 @@
-* {
-  box-sizing: border-box;
-}
-
 html {
   font-family: Roboto, sans-serif;
   --color-hover: #00acdc;
